# rofi-nested-menus

./: Cargo.toml  LICENSE  README.md  test.json
.github/workflows/: release.yml
src/: args.rs  main.rs  menu.rs  rofi.rs
