[package]
name = "rofi-menus"
description = "Simple CLI app that runs nested rofi dmenus based on json files."
version = "0.1.1"
edition = "2021"
authors = ["Christian S."]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
json = "0.12.4"
lazy_static = "1.4.0"

[profile.release]
lto = true